menambahkan font family update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 h1 {
-  font-family: sans-francisco, helvetica-neue, playfair;
+  font-family: sans-francisco, helvetica-neue, Playfair Display;
 }
 
 h2 {
-  font-family: sans-francisco, helvetica-neue, playfair;
+  font-family: sans-francisco, helvetica-neue, Playfair Display;
 }
 
 p {
-  font-family: sans-francisco, helvetica-neue, playfair;
+  font-family: sans-francisco, helvetica-neue, Playfair Display;
 }
 
 .jumbotron {
