--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,18 +655,17 @@ section {
 /* Video wrapper
 --------------------------------*/
 .videowrapper {
-  float: none;
-  clear: both;
-  width: 100%;
   position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 25px;
-  height: 0;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 75%;
 }
 .videowrapper iframe {
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
   height: 100%;
 }
@@ -674,7 +673,7 @@ section {
 /* Carousel wrapper
 --------------------------------*/
 .carousel-wrap {
-  width: 1000px;
+  width: 80%;
   margin: auto;
   position: relative;
 }
