--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,11 +744,18 @@ span.img-text:hover {
   padding: 80px 0;
 }
 .gallery {
-  grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2px;
+  margin-top: 1rem;
 }
+.news-wrap {
+  text-align: center;
+}
+
 .instaimg img {
+  display: flex;
   margin: auto;
-  margin-bottom: 20px;
   width: 280px;
   height: 280px;
   overflow: hidden;
@@ -759,6 +766,7 @@ span.img-text:hover {
   -moz-opacity: 0.8;
   -webkit-opacity: 0.8;
 }
+
 /* .instaimg:hover .text {
   opacity: 1;
   transform: translate();
@@ -783,6 +791,43 @@ span.img-text:hover {
 .buttongram:hover {
   background: #5190e9;
   color: #fff;
+}
+@media only screen and (max-width: 960px) {
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 2px;
+    margin: auto;
+  }
+  .instaimg img {
+    width: 180px;
+    height: 180px;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5px;
+    margin: auto;
+    margin-left: 2.3px;
+  }
+  .instaimg img {
+    width: 168px;
+    height: 168px;
+  }
+}
+@media only screen and (max-width: 525px) {
+  .instaimg img {
+    width: 128px;
+    height: 128px;
+  }
+}
+@media only screen and (max-width: 448px) {
+  .instaimg img {
+    width: 97px;
+    height: 97px;
+  }
 }
 /* Contact Section
 --------------------------------*/
